--- a/THINKBOARD/backend/package.json
+++ b/THINKBOARD/backend/package.json
@@ -5,12 +5,14 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "express": "^5.2.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
 }
