--- a/THINKBOARD/backend/package.json
+++ b/THINKBOARD/backend/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.2",
