--- a/THINKBOARD/backend/package.json
+++ b/THINKBOARD/backend/package.json
@@ -10,6 +10,8 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.8",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
